# iso8583_message_manager

./: .gitignore  ImplementationPlan.md  README.md  Task.md  pyproject.toml
api/: pyproject.toml
api/src/iso8583_api/: app.py  error_handler.py
api/src/iso8583_api/routers/: messages.py  metadata.py
api/src/iso8583_api/schemas/: generate.py
api/tests/: test_boundary.py  test_container.py  test_error_handler.py  test_security.py
api/tests/contract/: test_openapi_contract.py  test_openapi_validity.py
api/tests/integration/: test_api_integration.py
api/tests/presentation/api/: test_generate_endpoint.py  test_health.py  test_parse_endpoint.py
api/tests/routers/: test_generate_endpoint.py  test_metadata.py  test_parse_endpoint.py
app/: pyproject.toml
app/data/schemas/: iso8583_fields.json  openapi_base.yaml
app/scripts/code_generator/: generate_models.py  generate_openapi.py
app/src/iso8583_manager/core/: exceptions.py
app/src/iso8583_manager/core/interfaces/: iso_ports.py
app/src/iso8583_manager/core/models/: mti.py
app/src/iso8583_manager/infrastructure/pyiso8583_adapter/: wrapper.py
app/src/iso8583_manager/presentation/: container.py
app/src/iso8583_manager/use_cases/: message_generation.py
app/tests/core/: test_iso_models.py  test_mti.py
app/tests/infrastructure/: test_wrapper.py  test_wrapper_boundary.py  test_wrapper_errors.py
app/tests/integration/: test_cli_integration.py  test_message_generation_integration.py
app/tests/presentation/: test_container.py  test_error_handler.py  test_fields_command.py  test_generate_command.py  test_mti_types_command.py  test_parse_command.py
app/tests/presentation/api/: test_metadata.py  test_parse_endpoint.py
app/tests/scripts/: test_generate_models.py  test_generate_openapi.py  test_openapi_validity.py
app/tests/use_cases/: test_message_generation.py  test_message_generation_with_real_adapter.py  test_message_parsing.py
cli/: pyproject.toml
cli/src/iso8583_cli/: __main__.py  app.py  error_handler.py
cli/src/iso8583_cli/commands/: fields.py  generate.py  mti_types.py  parse.py
cli/src/iso8583_cli/formatters/: parse_formatter.py
cli/tests/: test_boundary.py
cli/tests/integration/: test_cli_integration.py
cli/tests/presentation/: test_cli_commands.py  test_container.py  test_error_handler.py  test_fields_command.py  test_generate_command.py  test_main.py  test_mti_types_command.py  test_parse_command.py
doc/: iso8583_specs.md  test_strategy.md
(+82 files in other folders)
