[project]
name = "iso8583-api"
version = "0.1.0"
description = "ISO 8583 FastAPI サービス"
requires-python = ">=3.10"
dependencies = [
    "iso8583-types",
    "iso8583-core",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "mypy>=1.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.uv.sources]
iso8583-types = { path = "../packages/iso8583-types", editable = true }
iso8583-core = { path = "../packages/iso8583-core", editable = true }
